--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-hook-form": "^7.33.1",
+    "uniqid": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,3 +41,4 @@
     ]
   }
 }
+
