--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "firebase": "^9.9.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-hook-form": "^7.33.1",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,4 +42,3 @@
     ]
   }
 }
-
