--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.0",
+    "firebase-tools": "^11.4.2",
     "react": "^18.1.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.1.0",
